fix panel arrangement, spacing, colors

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,14 +14,17 @@
 
 /* Sections */
 
-
 .left-section {
-  border-right: 1px solid rgba(0, 0, 0, 0.7);
+  background-color: var(--background-dark-2);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .left-section.collapsed {
   transition: width 0.3s ease-in-out;
-  width: 40px;
+  width: 50px;
 }
 
 .left-section.expanded {
@@ -35,6 +38,7 @@
   height: 30px;
   width: 30px;
   padding: 0px;
+  margin-top: 6px;
   outline: none;
 }
 
@@ -53,119 +57,38 @@
 }
 
 .right-section {
-  width: 100px;
+  width: 100%;
+  padding: 0px 6px;
+  background-color: var(--background-dark-3);
 }
 
-.top-section {
-  height: 10vh;
+.right-section-header {
+  height: 6vh;
+  padding: 6px 4px;
+}
+
+.right-section-header h2 {
+  margin: 0px;
+  padding: 0px;
+}
+
+.right-section-panes {
+  display: flex;
+  flex-direction: row;
+  height: 94vh;
+  gap: 5px;
 }
 
 .left-pane {
-  height: 70vh;
-  padding: 10px;
-  overflow-y: auto;
+  width: 50%;
 }
 
 .right-pane {
-  height: 20vh;
-  border-top: 1px solid rgba(0, 0, 0, 0.7);
-  padding: 10px;
-  overflow-y: auto;
+  width: 50%;
 }
 
 /* Top section */
 
 .app-title-header {
-  color: rgba(0, 0, 0, 0.5);
   line-height: 1.0;
-}
-
-/* Middle section */
-
-.network-editor-container {
-  height: 100%;
-  width: 100%;
-}
-
-.network-editor-canvas {
-  height: 100%;
-  width: 100%;
-  background-color: darkgray;
-}
-
-.node-rectangle {
-  cursor: move;
-}
-
-
-/* Bottom section */
-
-.group-previews-header-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 14px;
-}
-
-.group-previews-header {
-  margin: 0;
-}
-
-.add-group-button {
-  padding: 5px;
-  border: 1px solid gray;
-  border-radius: 6px;
-  height: 30px;
-  width: 30px;
-  background-color: transparent;
-  box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.6);
-}
-
-.add-group-button:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.group-previews-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.group-preview-container {
-  border: 1px solid black;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 150px;
-  padding: 8px;
-  cursor: pointer;
-  border-radius: 8px;
-}
-
-.highlighted-group-preview {
-  background-color: white;
-}
-
-.group-preview-delete-button {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-
-.delete-group-icon {
-  fill: rgb(146, 146, 146);
-  height: 100%;
-  width: 100%;
-}
-
-.delete-group-icon:hover {
-  fill: rgb(227, 1, 1);
 }
